Updated knowledge of liberation passage in various MA sutras

--- a/01_agama/madhyama/MA_043.md
+++ b/01_agama/madhyama/MA_043.md
@@ -47,7 +47,7 @@ next: MA_044.html
 12\. “Ānanda, one readily has no regrets because of observing precepts. One readily becomes glad because of having no regrets. One readily becomes joyous because of gladness. One readily becomes calm because of joy. One readily becomes happy because of calmness. One readily attains a concentrated state of mind because of happiness.
 {: #p12}
 
-13\. “Ānanda, the well-versed noble disciple who has a concentrated state of mind readily sees truly and knows truly. They readily become disenchanted because of true seeing and true knowing. They readily lack desire because of disenchantment. They readily become liberated because of the lack of desire. Because of liberation, they readily know they are liberated: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. They truly know they are no longer subject to existence.’
+13\. “Ānanda, the well-versed noble disciple who has a concentrated state of mind readily sees truly and knows truly. They readily become disenchanted because of true seeing and true knowing. They readily lack desire because of disenchantment. They readily become liberated because of the lack of desire. Because they are liberated, they then know that they are liberated. They truly know: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’
 {: #p13}
 
 14\. “Ānanda, these are the mutual advantages going from one thing to another and the mutual causes going from one thing to another. In this way, the precepts lead to what’s supreme, which is to cross over from this shore to the other shore.”
@@ -66,7 +66,7 @@ next: MA_044.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
