--- a/01_agama/madhyama/MA_072.md
+++ b/01_agama/madhyama/MA_072.md
@@ -615,7 +615,7 @@ Venerable Kimbila said, “Bhagavān, I am doing well. There isn’t anything th
 160\. “Aniruddha, if the disturbance of doubt arose in my mind, my mind was purified of that … the disturbance of unmindfulness … perceiving physical illness … drowsiness … excessive diligence … excessive indolence … fear … elation … conceited thoughts … the arising of diverse notions … the thought of not observing forms … my mind was purified of that. I fully cultivated the samādhi with perception and examination, fully cultivated the samādhi with no perception and some examination, and fully cultivated the samādhi without perception or examination. I fully cultivated one-pointed samādhi, fully cultivated mixed samādhi, fully cultivated a little samādhi, and fully cultivated extensive and measureless samādhi.
 {: #p160}
 
-161\. “I gave rise to knowing and seeing a full and bright purity, headed for a certain abode, and diligently cultivated the factors of the path. Birth was ended, the religious practice was established, and the task was accomplished. I truly knew that I was no longer subject to existence. Aniruddha, at that point I practiced in this way.”
+161\. “I gave rise to knowing and seeing a full and bright purity, headed for a certain abode, and diligently cultivated the factors of the path. I truly knew: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’ Aniruddha, at that point I practiced in this way.”
 {: #p161}
 
 162\. The Buddha spoke thus. When Venerable Aniruddha, Venerable Nandika, and Venerable Kimbila heard what the Buddha taught, they rejoiced and approved.
@@ -631,7 +631,7 @@ Venerable Kimbila said, “Bhagavān, I am doing well. There isn’t anything th
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 October 2024
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
