--- a/01_agama/madhyama/MA_073.md
+++ b/01_agama/madhyama/MA_073.md
@@ -80,10 +80,10 @@ next: MA_074.html
 
 #### Conclusion
 
-18\. “If I didn’t rightly know and apprehend these eight practices, then I couldn’t thoroughly declare their attainment. I wouldn’t know that I had awakened to the unsurpassed and correct awakening, nor could I have gone beyond this world’s gods, Māra, Brahmā, ascetics, and priests. I wouldn’t have been liberated by various liberations. I wasn’t yet free from delusions. I also wouldn’t have ended birth, established the religious practice, or accomplished the task, or truly known that I had stopped being subject to existence.
+18\. “If I didn’t rightly know and apprehend these eight practices, then I couldn’t thoroughly declare their attainment. I wouldn’t know that I had awakened to the unsurpassed and correct awakening, nor could I have gone beyond this world’s gods, Māra, Brahmā, ascetics, and priests. I wouldn’t have been liberated by various liberations. I wasn’t yet free from delusions. I also wouldn’t have truly known: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’
 {: #p18}
 
-19\. “If I rightly knew and attained these eight practices, then I could thoroughly declare their attainment. I knew I had awakened to the unsurpassed and correct awakening. I had gone beyond this world’s gods, Māra, Brahmā, ascetics, and priests. I was liberated by various liberations. My mind was free of delusions. I also had ended birth, established the religious practice, accomplished the task, and truly knew I was no longer subject to existence.”
+19\. “If I rightly knew and attained these eight practices, then I could thoroughly declare their attainment. I knew I had awakened to the unsurpassed and correct awakening. I had gone beyond this world’s gods, Māra, Brahmā, ascetics, and priests. I was liberated by various liberations. My mind was free of delusions. I also truly knew: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’”
 {: #p19}
 
 20\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
@@ -98,7 +98,7 @@ next: MA_074.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
