--- a/01_agama/madhyama/MA_074.md
+++ b/01_agama/madhyama/MA_074.md
@@ -103,7 +103,7 @@ next: MA_075.html
 28\. “Monks, the monk Aniruddha had accomplished these eight thoughts of a great man. Afterward, he spent a summer retreat in Cedi at Waterside Grove. With this teaching of mine, he lived alone in seclusion, his mind wasn’t careless, and he cultivated diligence. After living there alone in seclusion, not being careless, and cultivating diligence, he made himself a son of the clan. He shaved off his beard and hair, put on reddish-brown robes, became faithful, left home, went homeless, and trained on the path.
 {: #p28}
 
-29\. “Only when the unsurpassed religious practice is finished will he accomplish and dwell in his own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’”
+29\. “Only when the unsurpassed religious practice is finished will he accomplish and dwell in their own knowledge, awakening, and direct experience. He’ll truly know: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’”
 {: #p29}
 
 30\. At that moment, Venerable Aniruddha became an arhat. His mind rightly liberated, he became an elder and honored one. It was then that he spoke these verses,
@@ -146,7 +146,7 @@ That parinirvāṇa without remainder.”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 October 2024
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
