--- a/01_agama/madhyama/MA_075.md
+++ b/01_agama/madhyama/MA_075.md
@@ -88,7 +88,7 @@ The Bhagavān told him, “Ānanda, if a monk accepts nothing, he’ll surely at
 21\. “Ānanda, suppose he has this teaching: ‘Everything ends and ceases without remainder and never again exists. It then has no birth and no old age, illness, or death.’ The noble people thus contemplate. If he has that, it’s surely the teaching of liberation. Whether it’s nirvāṇa with or without remainder, it’s called immortality.
 {:#p21}
 
-22\. “Contemplating and seeing in this way, he’ll surely attain his mind’s liberation from the contaminants of desire and it’s liberation from the contaminants of existence and contaminants of ignorance. After being liberated, he readily knows that he is liberated: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I truly know that I’m longer subject to existence.’
+22\. “Contemplating and seeing in this way, he’ll surely attain his mind’s liberation from the contaminants of desire and it’s liberation from the contaminants of existence and contaminants of ignorance. After being liberated, he readily knows that he is liberated. He truly knows: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’
 {:#p22}
 
 23\. “Ānanda, I’ve now described for you the pure way to the imperturbable, described the pure way to the abode of nothingness, described the pure way to no conceptions, described nirvāṇa without remainder, and described the noble liberation. As an honored teacher produces great sympathy, protective mindfulness, and pity, seeks meaning, benefit, well-being, and happiness for his disciples, I’ve done that now. You should go on to do this yourselves. Go somewhere there’s no worldly affairs and sit under a tree in a grove or in an empty and peaceful dwelling. Sitting in reflection, don’t become careless, but diligently apply effort. Don’t let yourself regret it later. This is my instruction. This is my admonition.”
@@ -106,7 +106,7 @@ The Bhagavān told him, “Ānanda, if a monk accepts nothing, he’ll surely at
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
