--- a/01_agama/madhyama/MA_076.md
+++ b/01_agama/madhyama/MA_076.md
@@ -92,7 +92,7 @@ next: MA_077.html
 27\. Hearing what the Buddha taught, that monk well accepted and well retained it. He then rose from his seat, bowed his head at the Buddha’s feet, circled him three times, and left. Having accepted and retained the Buddha’s instructions, he went to live alone in seclusion, his mind wasn’t careless, and he cultivated diligence. As a result of living alone in seclusion, not being careless, and cultivating diligence, he became a clansman. He shaved off his beard and hair, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path.
 {: #p27}
 
-28\. It was only when the unsurpassed religious practice was finished that he accomplished and dwelt in his own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’ After knowing the Dharma, that venerable became an arhat.
+28\. It was only when the unsurpassed religious practice was finished that he accomplished and dwelt in his own knowledge, awakening, and direct experience. He truly knew: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’ After knowing the Dharma, that venerable became an <em>arhat</em>.
 {: #p28}
 
 29\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
@@ -107,7 +107,7 @@ next: MA_077.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
