--- a/01_agama/madhyama/MA_077.md
+++ b/01_agama/madhyama/MA_077.md
@@ -119,7 +119,7 @@ Aniruddha and the others accepted the teaching and listened.
 25\. “Aniruddha, the Tathāgata does this only for faithful clansmen and clanswomen who are the most believing, most affectionate, and would be most gladdened. After hearing this right Dharma and Vinaya, they might be inspired to emulate that disciple So-and-So. When a disciple’s life ends, I therefore relate that they had ‘a certain birth in a certain place, a certain birth in a certain place.’
 {: #p25}
 
-26\. “Suppose a monk hears this: ‘A certain venerable’s life has ended at some location, and the Buddha has related that he had attained the ultimate knowledge: “Birth has been ended, the religious practice has been established, and the task has been accomplished. I truly know that I’m no longer subject to existence.”’ He might have met that venerable personally, or he might have heard from numerous people: ‘That venerable is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
+26\. “Suppose a monk hears this: ‘A certain venerable’s life has ended at some location, and the Buddha has related that he had attained the ultimate knowledge. He truly knew: “Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.”’ He might have met that venerable personally, or he might have heard from numerous people: ‘That venerable is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
 {: #p26}
 
 “Having heard those people, he remembers: ‘That venerable was faithful, observed the precepts, was broadly learned, was generous, and was wise.’ Hearing this right Dharma and Vinaya, he might be inspired to emulate that Venerable So-and-So. Aniruddha, such a monk surely will attain a distinct abode of well-being.
@@ -141,7 +141,7 @@ Aniruddha and the others accepted the teaching and listened.
 
 #### 2. Nuns
 
-30\. “Aniruddha, suppose that a nun hears this: ‘A certain nun’s life has ended at some location, and the Buddha has related that she had attain the ultimate knowledge: “Birth has been ended, the religious practice has been established, and the task has been accomplished. I truly know that I’m no longer subject to existence.”’ She may have met that venerable personally, or she might have heard from numerous people: ‘That nun is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
+30\. “Aniruddha, suppose that a nun hears this: ‘A certain nun’s life has ended at some location, and the Buddha has related that she had attain the ultimate knowledge. She truly knew: “Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.”’ She may have met that venerable personally, or she might have heard from numerous people: ‘That nun is faithful in this way, observes the precepts in this way, is broadly learned in this way, is generous in this way, and is wise in this way.’
 {: #p30}
 
 “Having heard those people, she remembers: ‘That nun was faithful, observed the precepts, was broadly learned, was generous, and was wise.’ Hearing this right Dharma and Vinaya, she might be inspired to emulate that nun So-and-So. Aniruddha, such a nun surely will attain a distinct abode of well-being.
@@ -211,7 +211,7 @@ Aniruddha and the others accepted the teaching and listened.
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
