--- a/01_agama/madhyama/MA_080.md
+++ b/01_agama/madhyama/MA_080.md
@@ -194,7 +194,7 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 55\. “Good men, I truly knew, ‘This is suffering.’ I truly knew, ‘This is the formation of suffering’ … ‘This is cessation of suffering’ … ‘This is the path to the cessation of suffering.’ I truly knew, ‘These are contaminants’ … ‘This is the formation of contaminants’ … ‘This is the cessation of contaminants’ … ‘This is the path to the cessation of contaminants.’
 {: #p55}
 
-56\. “Knowing and seeing in this way, my mind was liberated from the contaminants of desire and liberated from the contaminants of existence and ignorance. After I was liberated, I readily knew that I was liberated: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I truly knew that I was no longer subject to existence.’
+56\. “Knowing and seeing in this way, my mind was liberated from the contaminants of desire and liberated from the contaminants of existence and ignorance. After I was liberated, I readily knew that I was liberated. I truly knew: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’
 {: #p56}
 
 #### Analogy of the Stairs
@@ -260,7 +260,7 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 October 2024
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
