--- a/01_agama/madhyama/MA_081.md
+++ b/01_agama/madhyama/MA_081.md
@@ -232,8 +232,10 @@ The monks answered, “No, Bhagavān. Why is that? They won’t obtain fire by r
 65\. “Furthermore, if he has calm liberation, that monk parts with form and attains formlessness. According to that manner of <em>samādhi</em>, he personally accomplishes its realization. He observes and knows the contaminants and ends the contaminants with wisdom. This is the twelfth virtue of someone who cultivates mindfulness of body and disseminates it in this way.
 {: #p65}
 
-66\. “Furthermore, that monk attains supernormal abilities … the divine ear … knowledge of other minds … knowledge of past lives … knowledge of birth-and-death … has ended the contaminants. Attaining the absence of contaminants, his mind is liberated, and his wisdom is liberated. In the present life, he knows and recognizes for himself the accomplishment of self-realization: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. He truly knows that he’s no longer subject to existence.’ This should be known as the thirteenth … eighteenth virtue of someone who cultivates mindfulness of body and disseminates it in this way.”
+66\. “Furthermore, that monk attains supernormal abilities … the divine ear … knowledge of other minds … knowledge of past lives … knowledge of birth-and-death … has ended the contaminants. Being uncontaminated, his mind is liberated, and his wisdom is liberated. In the present life, he accomplishes and dwells in his own knowledge, awakening, and direct experience. He truly knows: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’ This should be known as the thirteenth … eighteenth virtue of someone who cultivates mindfulness of body and disseminates it in this way.”
 {: #p66}
+
+
 
 67\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
 {: #p67}
@@ -248,7 +250,7 @@ The monks answered, “No, Bhagavān. Why is that? They won’t obtain fire by r
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 October 2024
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
