--- a/01_agama/madhyama/MA_083.md
+++ b/01_agama/madhyama/MA_083.md
@@ -76,7 +76,7 @@ Venerable Maudgalyāyana said to the Bhagavān, “Indeed, Bhagavān!”
 21\. It was then that Venerable Mahāmaudgalyāyana rose from his seat, adjusted his robe to one shoulder, and saluted the Buddha with his palms together. He said, “Bhagavān, how can a monk reach the ultimate, that is the ultimate purity, ultimate religious practice, and ultimate end of the religious life?”
 {:#p22}
 
-22\. The Bhagavān told him, “Mahāmaudgalyāyana, if a monk has pleasant feelings, painful feelings, or feelings that are neither pleasant nor painful, he contemplates these feelings as impermanent. He contemplates them as arising and passing away, contemplates ending them, and contemplates dispassion, cessation, and equanimity. After he contemplates these feelings as impermanent, contemplates them as arising and passing away, contemplates ending them, and contemplates dispassion, cessation, and equanimity, he is not subject to this world. Because he’s not subject to this world, he isn’t troubled. Because he isn’t troubled, he parinirvāṇas: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I truly know that I’m no longer subject to existence.’
+22\. The Bhagavān told him, “Mahāmaudgalyāyana, if a monk has pleasant feelings, painful feelings, or feelings that are neither pleasant nor painful, he contemplates these feelings as impermanent. He contemplates them as arising and passing away, contemplates ending them, and contemplates dispassion, cessation, and equanimity. After he contemplates these feelings as impermanent, contemplates them as arising and passing away, contemplates ending them, and contemplates dispassion, cessation, and equanimity, he is not subject to this world. Because he’s not subject to this world, he isn’t troubled. Because he isn’t troubled, he <em>parinirvāṇa</em>s. He truly knows: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’
 {:#p22}
 
 23\. “Mahāmaudgalyāyana, such a monk can reach the ultimate, which is the ultimate purity, ultimate religious practice, and ultimate end of the religious practice.”
@@ -96,7 +96,7 @@ Venerable Maudgalyāyana said to the Bhagavān, “Indeed, Bhagavān!”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
