--- a/01_agama/madhyama/MA_146.md
+++ b/01_agama/madhyama/MA_146.md
@@ -63,7 +63,7 @@ Pilotika replied, “So it is, priest! So it is! I support the Bhagavān a great
 15\. “Priest, that skilled elephant trainer still might not feel confident. There’s another elephant mother named [Vāmanikā] in this forest. She’s very tall and huge, and she possesses such a footprint. Searching for this footprint, he again sees a large elephant print. Seeing it, he believes that the footprint belongs to a huge elephant. After searching for this footprint, he sees that this large elephant print is very long and wide, circular, and sunk into the earth, and he sees that elephant, either when it’s coming, going, standing, or walking. Perhaps it’s standing up or lying down. After he sees that elephant, the trainer thinks, ‘If it has the same footprint, that surely is the huge elephant!’
 {:#p15}
 
-16\. “Thus, priest, a Tathāgata, Arhat, and Completely Awakened One arises in the world who’s accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and called the Buddha, the Blessed One. Among the gods, Māra, Brahmā, ascetics, and priests of this world, from humans up to the gods, he accomplished and dwells in his own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’
+16\. “Thus, priest, a Tathāgata, Arhat, and Completely Awakened One arises in the world who’s accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and called the Buddha, the Blessed One. Among the gods, Māra, Brahmā, ascetics, and priests of this world, from humans up to the gods, he accomplishes and dwells in his own knowledge, awakening, and direct experience. He truly knows: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’
 {:#p16}
 
 17\. “He explains a teaching that’s wonderful in the beginning, middle, and end. Both its meaning and words are complete and pure, and it demonstrates the religious practice. When he explains the teaching to a householder or a householder’s son, they become faithful after hearing it.
@@ -189,7 +189,7 @@ Pilotika replied, “So it is, priest! So it is! I support the Bhagavān a great
 55\. “He truly knows, ‘This is suffering.’ He truly knows, ‘This is the formation of suffering’ … ‘This is the cessation of suffering’ … ‘This is the path to the cessation of suffering.’ He truly knows, ‘These are contaminants’ … ‘This is the formation of contaminants’ … ‘This is the cessation of contaminants’ … ‘This is the path to the cessation of contaminants.’
 {:#p55}
 
-56\. “Knowing and seeing in this way, his mind is liberated from the contaminants of desire and liberated from the contaminants of existence and ignorance. Once he’s liberated, he readily knows that he’s liberated: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I truly know that I’m no longer subject to existence.’
+56\. “Knowing and seeing in this way, his mind is liberated from the contaminants of desire and liberated from the contaminants of existence and ignorance. Once he’s liberated, he readily knows that he’s liberated. He truly knows: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’
 {:#p56}
 
 57\. “Priest, this is what’s exhausted by the Tathāgata, what’s practiced by the Tathāgata, and what’s worn by the Tathāgata. Still, this isn’t entirely what makes the Bhagavān a Tathāgata, Arhat, and Completely Awakened One, nor why the Bhagavān’s teaching is good and the Tathāgata’s disciples are a noble assembly that’s well destined.
@@ -218,7 +218,7 @@ Pilotika replied, “So it is, priest! So it is! I support the Bhagavān a great
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 October 2024
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
