--- a/01_agama/madhyama/MA_200.md
+++ b/01_agama/madhyama/MA_200.md
@@ -223,7 +223,7 @@ The monks answered, “So it is, Bhagavān. It’s a perfect statement and view,
 54\. “Something is viewed like this: ‘This is the soul, this is the world, and this is me. I will exist in the afterlife, being permanent and unchanging. I’ll be eternal and not subject to decay.’ [He thinks:] ‘None of them are possessed by me, I am not possessed by them, nor are they the soul.’ Wisely observing it this way, he knows it as it really is.
 {:#p54}
 
-55\. “Suppose a monk sees these six abodes of views and doesn’t see there a soul and doesn’t see something possessed by a soul. After not seeing them that way, he then doesn’t accept this world. After not accepting this world, then he has no fear. After he has no fear, then he attains parinirvāṇa: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I won’t be subject to another existence.’ He knows it as it truly is.
+55\. “Suppose a monk sees these six abodes of views and doesn’t see there a soul and doesn’t see something possessed by a soul. After not seeing them that way, he then doesn’t accept this world. After not accepting this world, then he has no fear. After he has no fear, then he attains <em>parinirvāṇa</em>. He truly knows: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’
 {:#p55}
 
 #### The Liberated Monk
@@ -293,7 +293,7 @@ The monks replied, “No, Bhagavān.”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
