--- a/01_agama/madhyama/MA_204.md
+++ b/01_agama/madhyama/MA_204.md
@@ -57,18 +57,18 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 12\. “What is the state of old age … death … grief and sorrow … defilement? Children and brothers are a state of defilement. Elephants, horses, sheep, cattle, servants, property, treasure, and grain are states of defilement and harm. When sentient beings come into contact with them, they are defiled with greed and attachment. Conceitedness is accepted and enters them. They don’t see the danger or the escape when taking and making use [of these things].
 {:#p12}
 
-13\. “If those people want to pursue the unsurpassed safety of nirvāṇa that lacks illness, they will never be able to attain the unsurpassed safety of nirvāṇa that lacks illness. If they pursue the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement, they will never be able to attain the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement. These are called the pursuits that aren’t noble.
+13\. “If those people want to pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks illness, they will never be able to attain the unsurpassed safety of <em>nirvāṇa</em> that lacks illness. If they pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, death, grief and sorrow, and defilement, they will never be able to attain the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, death, grief and sorrow, and defilement. These are called the pursuits that aren’t noble.
 {:#p13}
 
 #### The Noble Pursuit
 
-14\. “What is the noble pursuit? Someone has the thought, ‘I am myself really in a state of illness, and I don’t go against pursuing a state of illness. I am myself really in a state of old age … death … grief and sorrow … defilement and don’t go against pursuing a state of defilement. Perhaps I should pursue the unsurpassed safety of nirvāṇa that lacks illness and pursue the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement.’
+14\. “What is the noble pursuit? Someone has the thought, ‘I am myself really in a state of illness, and I don’t go against pursuing a state of illness. I am myself really in a state of old age … death … grief and sorrow … defilement and don’t go against pursuing a state of defilement. Perhaps I should pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks illness and pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, death, grief and sorrow, and defilement.’
 {:#p14}
 
-15\. “When that person then pursues the unsurpassed safety of nirvāṇa that lacks illness, they surely can attain the unsurpassed safety of nirvāṇa that lacks illness. When they pursue the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement, they surely can attain the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement.
+15\. “When that person then pursues the unsurpassed safety of <em>nirvāṇa</em> that lacks illness, they surely can attain the unsurpassed safety of <em>nirvāṇa</em> that lacks illness. When they pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, death, grief and sorrow, and defilement, they surely can attain the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, death, grief and sorrow, and defilement.
 {:#p15}
 
-16\. “Before I perceived the unsurpassed, right, and complete enlightenment, I also had this thought: ‘I am myself really in a state of illness, and I don’t go against pursuing a state of illness. I am myself really in a state of old age … death … grief and sorrow … defilement and don’t go against pursuing a state of defilement. Perhaps I should pursue the unsurpassed safety of nirvāṇa that lacks illness and pursue the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement.’
+16\. “Before I perceived the unsurpassed, right, and complete enlightenment, I also had this thought: ‘I am myself really in a state of illness, and I don’t go against pursuing a state of illness. I am myself really in a state of old age … death … grief and sorrow … defilement and don’t go against pursuing a state of defilement. Perhaps I should pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks illness and pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, death, grief and sorrow, and defilement.’
 {:#p16}
 
 #### Training Under Ārāḍa Kālāma
@@ -76,7 +76,7 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 17\. “When I was a young man, I had pure blue-black hair and flourished from year to year until I was 29. That period was my happiest and most fun. I was handsome, decked out, and traveled about. Back then, my father and mother cried and my friends were unhappy when I shaved off my hair and beard, put on the reddish-brown robes, became faithful, renounced home, went homeless, and trained on the path. I guarded myself physically and my livelihood was pure. I guarded my words and thoughts, and my livelihood was pure.
 {:#p17}
 
-18\. After I had accomplished this body of precepts, I wanted to pursue the unsurpassed safety of nirvāṇa that lacks illness and the unsurpassed safety of nirvāṇa that lacks old age, lacks death, grief and sorrow, and defilement. I therefore went to Ārāḍa Kālāma and asked him, “Ārāḍa, I want to practice the religious life under you. May I do so?”
+18\. After I had accomplished this body of precepts, I wanted to pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks illness and the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, lacks death, grief and sorrow, and defilement. I therefore went to Ārāḍa Kālāma and asked him, “Ārāḍa, I want to practice the religious life under you. May I do so?”
 {:#p18}
 
 Ārāḍa replied to me, “Good man, there’s no reason for me not to allow it. If you want to practice, then practice.”
@@ -97,12 +97,12 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 22\. “Ārāḍa Kālāma also said to me, ‘Good man, just as I’ve realized this teaching, you’ve done so, too. Just as you’ve realized this teaching, I’ve done so, too. Come, good man, and lead this assembly with me.’
 {:#p22}
 
-23\. “I lived there with Ārāḍa Kālāma, and I was made his equal, supremely respected, supremely supported, and supremely joyous. Again, I thought, ‘This teaching doesn’t lead to knowledge, doesn’t lead to awakening, and doesn’t lead to nirvāṇa. Perhaps now I should abandon this teaching and pursue the unsurpassed safety of nirvāṇa that lacks illness and pursue the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement.’
+23\. “I lived there with Ārāḍa Kālāma, and I was made his equal, supremely respected, supremely supported, and supremely joyous. Again, I thought, ‘This teaching doesn’t lead to knowledge, doesn’t lead to awakening, and doesn’t lead to <em>nirvāṇa</em>. Perhaps now I should abandon this teaching and pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks illness and pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, death, grief and sorrow, and defilement.’
 {:#p23}
 
 #### Training Under Udraka Rāmaputra
 
-24\. “After I abandoned that teaching, I then pursued the unsurpassed safety of nirvāṇa that lacks illness and pursued the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement. I went to visit Udraka Rāmaputra and asked him, ‘Udraka, I wish to train in your teaching. May I do so?’
+24\. “After I abandoned that teaching, I then pursued the unsurpassed safety of <em>nirvāṇa</em> that lacks illness and pursued the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, death, grief and sorrow, and defilement. I went to visit Udraka Rāmaputra and asked him, ‘Udraka, I wish to train in your teaching. May I do so?’
 {:#p24}
 
 25\. “Udraka Rāmaputra replied to me, ‘Good man, there’s no reason for me not to allow it. If you want to train, then train.’
@@ -127,12 +127,12 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 30\. “Udraka also said to me, ‘Just as I Rāmaputra have realized this teaching, you have done so, too. Just as you have realized this teaching, I have done so, too. Come, good man, and lead this assembly together with me.’
 {:#p30}
 
-31\. “I lived with Udraka Rāmaputra as an equal teacher. I was also supremely respected, supremely supported, and supremely joyous like the teacher. Again, I thought, ‘This teaching doesn’t lead to knowledge, doesn’t lead to awakening, and doesn’t lead to nirvāṇa. Perhaps now I should abandon this teaching and pursue the unsurpassed safety of nirvāṇa that lacks illness and pursue the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement.’
+31\. “I lived with Udraka Rāmaputra as an equal teacher. I was also supremely respected, supremely supported, and supremely joyous like the teacher. Again, I thought, ‘This teaching doesn’t lead to knowledge, doesn’t lead to awakening, and doesn’t lead to <em>nirvāṇa</em>. Perhaps now I should abandon this teaching and pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks illness and pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, death, grief and sorrow, and defilement.’
 {:#p31}
 
 #### Attaining Complete Awakening
 
-32\. “After I abandoned that teaching, I pursued the unsurpassed safety of nirvāṇa that lacks illness and pursued the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement, I went south of Elephant Head Mountain to a priest town in Uruvilvā named Sena.
+32\. “After I abandoned that teaching, I pursued the unsurpassed safety of <em>nirvāṇa</em> that lacks illness and pursued the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, death, grief and sorrow, and defilement, I went south of Elephant Head Mountain to a priest town in Uruvilvā named Sena.
 {:#p32}
 
 33\. “While I was in that land, I reach the lovely mountain forest of Uruvilvā and bathed on the bank of the Nairañjanā River. After seeing that, I then thought, ‘This land is so lovely with this mountain forest of Uruvilvā and this pure current on the bank of the Nairañjanā river. If a clansman wanted to train in something, they could do that training here. I also should train; perhaps I will train here.’
@@ -141,7 +141,7 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 34\. “Then I carried grass to the bodhi tree. Arriving there, I prepared a sitting mat and sat down cross-legged. I could not stop sitting there until I attained the end of the contaminants, and so I did not stop sitting there until I attained the end of the contaminants.
 {:#p34}
 
-35\. “I pursued the unsurpassed safety of nirvāṇa that lacks illness, and then I attained the unsurpassed safety of nirvāṇa that lacks illness. I pursued the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement, and then I attained the unsurpassed safety of nirvāṇa that lacks old age, death, grief and sorrow, and defilement. Knowing arose and seeing arose, and I was certain about the things that are factors of the path: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I’m no longer subject to existence and know it as it really is.’
+35\. “I pursued the unsurpassed safety of <em>nirvāṇa</em> that lacks illness, and then I attained the unsurpassed safety of <em>nirvāṇa</em> that lacks illness. I pursued the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, death, grief and sorrow, and defilement, and then I attained the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, death, grief and sorrow, and defilement. Knowing arose and seeing arose, and I was certain about the things that are factors of the path. I truly knew: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’
 {:#p35}
 
 #### Who Will Be First to Learn the Teaching?
@@ -216,7 +216,7 @@ That’s never been turned in the world before.’
 49\. “When I went to those five monks, they didn’t treat me as being wonderful or dignified. Some rose from their seats with their bowls and robes, some prepared seats, some brought water, or some went to wash their feet. I then thought, ‘These are foolish people. How can they be so unreliable? They stand and arrange things freely, and then they go back to where they were!’ After I recognized that, I sat on the seat that the five monks had prepared.
 {:#p49}
 
-50\. “Then the five monks called me by my clan and ‘friend.’  I said to them, ‘Five monks, I am a Tathāgata, Arhat, and Rightly and Completely Enlightened One. Don’t call me by my original clan, and don’t call me ‘friend.’ Why is that? I sought the unsurpassed safety of nirvāṇa that’s without illness and attained the unsurpassed safety of nirvāṇa that’s without illness. I sought the unsurpassed safety of nirvāṇa that’s without old age … death … grief and sorrow … defilement, and I attained the unsurpassed safety of nirvāṇa that’s without old age … death … grief and sorrow … defilement. I produced knowing, seeing, and certainty about the factors of the path. Birth has ended, the religious practice has been established, and the task has been accomplished. I’m no longer subject to existence and know it as it really is.’
+50\. “Then the five monks called me by my clan and ‘friend.’  I said to them, ‘Five monks, I am a Tathāgata, Arhat, and Rightly and Completely Enlightened One. Don’t call me by my original clan, and don’t call me ‘friend.’ Why is that? I sought the unsurpassed safety of <em>nirvāṇa</em> that’s without illness and attained the unsurpassed safety of <em>nirvāṇa</em> that’s without illness. I sought the unsurpassed safety of <em>nirvāṇa</em> that’s without old age … death … grief and sorrow … defilement, and I attained the unsurpassed safety of <em>nirvāṇa</em> that’s without old age … death … grief and sorrow … defilement. I produced knowing, seeing, and certainty about the factors of the path. I truly knew: “Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.”’
 {:#p50}
 
 “They said to me, ‘Friend, Gautama. Before, you had such a practice, such a path, and such an asceticism, but you weren’t able to attain the higher state of a human or the distinctly noble knowing and seeing. How could do that today having many desires, many pursuits, eating delicious meals of good rice, barley, milk, and honey, and rubbing your body with sesame oil?’
@@ -229,13 +229,13 @@ That’s never been turned in the world before.’
 52\. “I then told them, ‘Five monks, you should know there are two extreme practices, ways that practitioners shouldn’t train. The first is attachment to desires and base acts that are done by ordinary people. The second is self-torments and self-mortifications, which are not teachings sought by noble people and have no purpose associated with them.
 {:#p52}
 
-53\. “‘Five monks, abandon these two extremes and take up the middle way. It accomplishes insight, accomplishes knowledge, and accomplishes samādhi, and then you’ll attain the freedom to head for knowledge, awakening, and Nirvāṇa. It’s the eightfold right path, which is right view … right samādhi. These are the eight.’
+53\. “‘Five monks, abandon these two extremes and take up the middle way. It accomplishes insight, accomplishes knowledge, and accomplishes samādhi, and then you’ll attain the freedom to head for knowledge, awakening, and <em>nirvāṇa</em>. It’s the eightfold right path, which is right view … right samādhi. These are the eight.’
 {:#p53}
 
 54\. “As they wished, I instructed the five monks as it was appropriate. I taught two of them while three of them solicited food. Those three brought food enough for six people to eat. I taught three of them while two of them solicited food. Those two brought enough food for six people to eat. I thus taught and thus converted them.
 {:#p54}
 
-55\. “Seeking the unsurpassed safety of nirvāṇa without illness, they attained the unsurpassed safety of nirvāṇa without illness. Seeking the unsurpassed safety of nirvāṇa without old age … death … grief and sorrow … defilement, they attained the unsurpassed safety of nirvāṇa without old age … death … grief and sorrow … defilement. Giving rise to knowing and seeing, they were certain about the factors of the path. Birth was ended, the religious practice was established, and the task was accomplished. They weren’t subject to existence and knew it as it really was.
+55\. “Seeking the unsurpassed safety of <em>nirvāṇa</em> without illness, they attained the unsurpassed safety of <em>nirvāṇa</em> without illness. Seeking the unsurpassed safety of <em>nirvāṇa</em> without old age … death … grief and sorrow … defilement, they attained the unsurpassed safety of <em>nirvāṇa</em> without old age … death … grief and sorrow … defilement. Giving rise to knowing and seeing, they were certain about the factors of the path. They truly knew: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’
 {:#p55}
 
 56\. “Thereupon, the I again told them, ‘Five monks, there are five desires that are lovely, pleasing, and memorable to think about, and they are associated with good desire. What are the five? The eye perceives form, the ear perceives sound, the nose perceives odor, the tongue perceives flavor, and the body perceives touch. Five monks, the foolish ordinary person who is not well-versed doesn’t meet good friends, doesn’t know the noble teaching, and isn’t steered by the noble teaching. When they contact [those sensory objects], they are defiled by greed and attachment. Conceited, they accept and enter them. They don’t see the danger or the escape when taking and making use [of these things].
@@ -262,16 +262,18 @@ That’s never been turned in the world before.’
 63\. “He knows as it really is, ‘This is suffering.’ He knows as it really is, ‘This is suffering’s accumulation.’ He knows as it really is, ‘This is the suffering’s cessation.’ He knows as it really is, ‘This is the path to suffering’s cessation.’ He knows as it really is, ‘These are contaminants.’ He knows, ‘This is the accumulation of contaminants.’ He knows, ‘This is the cessation of contaminants.’ He knows, ‘This is the path to the cessation of contaminants.’ He thus knows and thus sees liberation from the mind’s contaminants of desire and liberation from the mind’s contaminants of existence and ignorance.
 {:#p63}
 
-64\. “Once he’s liberated, then he knows his liberation: ‘Birth has ended, the religious practice has been established, and the task has been accomplished. I’m no longer subject to existence and know it as it really is.’ At that point, he can practice as he likes, abide as he likes, sit as he likes, and lie down as he likes. Why is that? He has seen it for himself that bad and unwholesome things are ended; therefore, he can practice as he likes, abide as he likes, sit as he likes, and lie down as he likes.
+64\. “Once he’s liberated, then he knows his liberation. He truly knows: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’ At that point, he can practice as he likes, abide as he likes, sit as he likes, and lie down as he likes. Why is that? He has seen it for himself that bad and unwholesome things are ended; therefore, he can practice as he likes, abide as he likes, sit as he likes, and lie down as he likes.
 {:#p64}
 
 65\. “Five monks, it’s like a place where there’s no business and no people. A wild deer that’s there goes where it likes, abides as it likes, shelters as it likes, and lies down as it likes. Why is that? That wild deer doesn’t live in the domain of hunters; therefore, it goes as it likes, abides as it likes, shelters as it likes, and lies down as it likes.
 {:#p65}
 
-66\. “Thus, five monks, a monk who ends the contaminants attains the absence of contaminants. His mind is liberated, and his wisdom is liberated. He accomplishes and dwells in his own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’ At that point, he practices as he likes, abides as he likes, sits as he likes, and lies down as he likes. Why is that? He sees for himself that measureless bad and unwholesome things are ended; therefore, he practices as he likes, abides as he likes, sits as he likes, and lies down as he likes.
+66\. “Thus, five monks, a monk who ends the contaminants becomes uncontaminated. Their mind is liberated, and their wisdom is liberated. They accomplish and dwell in their own knowledge, awakening, and direct experience. They truly know: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’ At that point, he practices as he likes, abides as he likes, sits as he likes, and lies down as he likes. Why is that? He sees for himself that measureless bad and unwholesome things are ended; therefore, he practices as he likes, abides as he likes, sits as he likes, and lies down as he likes.
 {:#p66}
 
-67\. “Five monks, this is the teaching of liberation without remainder. This is the teaching of the unsurpassed safety of nirvāṇa without illness. This is the teaching of the unsurpassed safety of nirvāṇa without old age … death … grief and sorrow … defilement.”
+
+
+67\. “Five monks, this is the teaching of liberation without remainder. This is the teaching of the unsurpassed safety of <em>nirvāṇa</em> without illness. This is the teaching of the unsurpassed safety of <em>nirvāṇa</em> without old age … death … grief and sorrow … defilement.”
 {:#p67}
 
 68\. The Buddha spoke thus. Venerable Ānanda and the monks who heard what he taught rejoiced and approved.
@@ -287,7 +289,7 @@ That’s never been turned in the world before.’
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 October 2024
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
