--- a/01_agama/madhyama/MA_004.md
+++ b/01_agama/madhyama/MA_004.md
@@ -104,7 +104,7 @@ The monks then accepted the teaching and listened.
 24\. “How does a person stand up after emerging, look around after standing, wade across after looking around, reach the other shore after wading across, and is called a priest standing on the shore after reaching the other shore? It means a person emerges and attains faith in the good Dharma. Observing precepts, generous, well-versed, and wise, they cultivate the good Dharma. At some point later, their faith remains resolute; it isn’t lost. Their observance of precepts, generosity, learning, and wisdom are resolute; they aren’t lost.
 {: #p24}
 
-25\. “Abiding in the good Dharma, they truly know suffering. They truly know suffering’s formation, know suffering’s cessation, and know the path to the cessation of suffering. Knowing and seeing this, their mind is liberated from the contaminants of desire, and it’s liberated from the contaminants of existence and ignorance. After being liberated, they then know that they are liberated: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. I truly know that I’m no longer subject to existence.’
+25\. “Abiding in the good Dharma, they truly know suffering. They truly know suffering’s formation, know suffering’s cessation, and know the path to the cessation of suffering. Knowing and seeing this, their mind is liberated from the contaminants of desire, and it’s liberated from the contaminants of existence and ignorance. After being liberated, they then know that they are liberated. They truly know: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’
 {: #p25}
 
 26\. “This is called the person who stands up after emerging, looks around after standing, wades across after looking around, reaches the other shore after wading across, and is called a priest standing on the shore after reaching the other shore. They’re like a person submerged in water who stands up after emerging, looks around after standing, wades across after looking around, reaches the other shore after wading across, and is called someone who stands on the shore after reaching the other shore. I say this person is likewise. This is called the seventh metaphor of a person in water. The world in truth does have such people.
@@ -127,7 +127,7 @@ The monks then accepted the teaching and listened.
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
