--- a/01_agama/madhyama/MA_042.md
+++ b/01_agama/madhyama/MA_042.md
@@ -12,54 +12,69 @@ next: MA_043.html
 ### 42. What Purpose
 
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
+{: #p1}
 
 2\. It was then that Venerable Ānanda rose from his seat of repose in the afternoon and went to Buddha. He bowed his head at the Buddha’s feet and withdrew to sit at one side. He asked, “Bhagavān, what is the purpose of observing precepts?”
+{: #p2}
 
 The Bhagavān replied, “Ānanda, observing precepts has the purpose of causing no regrets. Ānanda, if someone were to observe the precepts, they would readily have no regrets.”
 
 3\. Again, he asked, “Bhagavān, what is the purpose of having no regrets?”
+{: #p3}
 
 The Bhagavān replied, “Ānanda, having no regrets has the purpose of causing gladness. Ānanda, if someone were to have no regrets, they would readily become glad.”
 
 4\. Again, he asked, “Bhagavān, what is the purpose of gladness?”
+{: #p4}
 
 The Bhagavān replied, “Ānanda, gladness has the purpose of causing joy. Ānanda, if someone were glad, they would readily become joyous.”
 
 5\. Again, he asked, “Bhagavān, what is the purpose of joy?”
+{: #p5}
 
 The Bhagavān replied, “Ānanda, joy has the purpose of causing calm. Ānanda, if someone were joyous, they would readily calm themselves.”
 
 6\. Again, he asked, “Bhagavān, what is the purpose of calm?”
+{: #p6}
 
 The Bhagavān replied, “Ānanda, calm has the purpose of causing happiness. Ānanda, if someone were calm, they would readily have a feeling of happiness.”
 
 7\. Again, he asked, “Bhagavān, what is the purpose of happiness?”
+{: #p7}
 
 The Bhagavān replied, “Ānanda, happiness has the purpose of causing samādhi. Ānanda, if someone were happy, they would readily reach a concentrated state of mind.”
 
 8\. Again, he asked, “Bhagavān, what is the purpose of samādhi?”
+{: #p8}
 
 The Bhagavān replied, “Ānanda, samādhi has the purpose of causing true seeing and true knowing. Ānanda, if someone were to have samādhi, they would readily attain true seeing and true knowing.”
 
 9\. Again, he asked, “Bhagavān, what is the purpose of true seeing and true knowing?”
+{: #p9}
 
 The Bhagavān replied, “Ānanda, true seeing and true knowing has the purpose of causing disenchantment. Ānanda, if someone truly sees and truly knows, they would readily become disenchanted.”
 
 10\. Again, he asked, “Bhagavān, what is the purpose of disenchantment?”
+{: #p10}
 
 The Bhagavān replied, “Ānanda, disenchantment has the purpose of causing the lack of desire. Ānanda, if someone were disenchanted, they would readily have a lack of desire.”
 
 11\. Again, he asked, “Bhagavān, what is the purpose of the lack of desire?”
+{: #p11}
 
 The Bhagavān replied, “Ānanda, the lack of desire has the purpose of causing liberation. Ānanda, if someone were lack desire, they would readily become liberated from all lust, hatred, and delusion.
 
 12\. “Therefore, Ānanda, one readily has no regrets because of observing precepts. One readily becomes glad because of having no regrets. One readily becomes joyous because of gladness. One readily becomes calm because of joy. One readily becomes happy because of calmness. One readily attains samādhi because of happiness.
+{: #p12}
 
-13\. “Ānanda, the well-versed disciple readily attains true seeing and true knowing because of samādhi. They readily become disenchanted because of true seeing and true knowing. They readily have a lack of desire because of disenchantment. They readily become liberated because of the lack of desire. Because of liberation, they readily know they are liberated: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished. They truly know they are no longer subject to existence.’
+13\. “Ānanda, the well-versed disciple readily attains true seeing and true knowing because of samādhi. They readily become disenchanted because of true seeing and true knowing. They readily have a lack of desire because of disenchantment. They readily become liberated because of the lack of desire. Because they are liberated, they then know that they are liberated. They truly know: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’
+{: #p13}
 
 14\. “Ānanda, these are the mutual advantages going from one thing to another and the mutual causes going from one thing to another. In this way, the observance of precepts leads to what’s supreme, which is to cross over from this shore to the other shore.”
+{: #p14}
 
 15\. The Buddha spoke thus. The Venerable Ānanda and the monks who heard what the Buddha had taught rejoiced and approved.
+{: #p15}
 
 ---
 
@@ -71,7 +86,7 @@ The Bhagavān replied, “Ānanda, the lack of desire has the purpose of causing
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 March 2024
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
